--- a/Blog/templates/layout.html
+++ b/Blog/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Coder Erkan Blog</title>
+    <title>{% block title %}Coder Erkan Blog{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,13 +12,62 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <!-- Custom styles -->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
+
+    {% block extra_css %}{% endblock %}
 </head>
 
-<img src="" alt="">
-<body>
+<body style="background-color: #F0F2F5; color: #212529;">
 
+    <!-- Navigation -->
     {% include 'includes/navbar.html' %}
 
+    <!-- Navigation end -->
+
+
+
+
+    <!-- Main Content Area -->
+    <div class="container mt-4">
+        <div class="row">
+
+            <!-- Main Content -->
+            <main class="col-lg-8 col-md-7 col-sm-12 mb-4">
+                    {% block main %}
+                    <!-- Content from child templates will be inserted here -->
+                    {% endblock %}
+            </main>
+
+
+
+
+            <!-- Aside Content -->
+            <aside class="col-lg-4 col-md-5 col-sm-12 mb-4">
+
+                    {% block aside%}
+                    <!-- Content from child templates will be inserted here -->
+                    {% endblock %}
+
+                    {% block asideTopics%}
+                    <!-- Content from child templates will be inserted here -->
+                    {% endblock %}
+
+            </aside>
+
+        </div>
+    </div>
+    <!-- Main Content Area end -->
+
+    <!-- About Content Area Start -->
+
+    <div class="container mt-4">
+        {% block about %}
+        <!-- Content from child templates will be inserted here -->
+        {% endblock  about %}
+    </div>
+    <!-- About Content Area Start -->
 
 
 
@@ -27,17 +76,25 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js"
-        integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+"
-        crossorigin="anonymous"></script>
 
+
+
+    <!-- Footer -->
+    <footer class="footer mt-5 py-3 bg-light">
+        <div class="container text-center">
+            <span class="text-muted">© 2025 Coder Erkan Blog. All rights reserved.</span>
+        </div>
+    </footer>
+
+    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
         crossorigin="anonymous"></script>
-        
+
+    <!-- Custom JavaScript -->
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
+    {% block extra_js %}{% endblock %}
 </body>
 
 </html>
