--- a/Blog/templates/includes/navbar.html
+++ b/Blog/templates/includes/navbar.html
@@ -11,7 +11,7 @@
       <!-- Left side links start -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="/about">Hakkımızda</a>
+          <a class="nav-link active" href="/about">Hakkımda</a>
         </li>
 
         <li class="nav-item">
