--- a/Blog/templates/layout.html
+++ b/Blog/templates/layout.html
@@ -24,12 +24,21 @@
     <!-- Navigation -->
     {% include 'includes/navbar.html' %}
 
+    {% include  "includes/messages.html" %}
+
     <!-- Main Content Area -->
     <div class="container mt-4">
+
+        
+
 
         <!-- Register Area -->
         {% block register %}
         {% endblock %}
+
+        {% block login %}
+        {% endblock %}
+
 
         <div class="row">
             <!-- Main Content -->
@@ -67,6 +76,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
         crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
     <!-- Custom JavaScript -->
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 
