--- a/Blog/templates/register.html
+++ b/Blog/templates/register.html
@@ -10,8 +10,8 @@
         <h1 class="text-center mb-3 fs-3 fw-semibold">Kayıt Ol</h1>
         
         <form action="" method="post">
-          <div class="mb-2">
-            {{ render_field(form.name, class="form-control py-2") }}
+          <div class="mb-2 fw-light">
+            {{ render_field(form.name, class="form-control py-2 form-label") }}
           </div>
           
           <div class="mb-2">
