--- a/Blog/templates/login.html
+++ b/Blog/templates/login.html
@@ -13,8 +13,8 @@
 
           <form method="post" class="needs-validation" novalidate>
             <div class="mb-3">
-              <label for="userName" class="form-label">Kullanıcı Adı veya Email</label>
-              <input type="text" class="form-control py-2" id="userName" name="userName" required>
+              <label for="username" class="form-label">Kullanıcı Adı veya Email</label>
+              <input type="text" class="form-control py-2" id="userName" name="username" required>
               <div class="invalid-feedback">Lütfen kullanıcı adınızı girin</div>
             </div>
 
