Add user dashboard and article management features; implement article creation form and enhance navigation with dashboard link

--- a/Blog/templates/includes/navbar.html
+++ b/Blog/templates/includes/navbar.html
@@ -32,6 +32,10 @@
         {% if session["logged_in"] %} <!-- Eğer kullanıcı giriş yapmışsa  Çıkış butonunu göster -->
 
         <li class="nav-item">
+          <a class="nav-link" href="/dashboard">Kontrol Paneli</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" href="/logout">Çıkış Yapın</a>
         </li>
 
