--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -4,7 +4,7 @@
 {% block main %}
 
 <div class="rounded-3 p-4 shadow-sm bg-white">
-  <h1 class="text-center  fw-semibold">👋 Hoş Geldin!, {{username}}</h1>
+  <h1 class="text-center  fw-semibold">👋 Hoş Geldin!, {{session["username"]}}</h1>
   <hr>
   <p>Coder Erkan Blog'a Merhaba De! </p>
   <p class="lead">
