--- a/Blog/templates/addarticle.html
+++ b/Blog/templates/addarticle.html
@@ -17,7 +17,7 @@
                             {{ render_field(form.title, class="form-control form-control-lg", placeholder="Makale başlığını giriniz") }}
                         </div>
                         
-                        <div class="form-group mb-4">
+                        <div class="form-group mb-4 content">
                             {{ render_field(form.content, class="form-control", rows="12", placeholder="Makale içeriğini yazınız...") }}
                         </div>
                         
