--- a/Blog/templates/index.html
+++ b/Blog/templates/index.html
@@ -24,18 +24,7 @@
 <br>
 
 {% if session["logged_in"] %}
-<!--Blog Post Area-->
-<div class="rounded-3 p-4 shadow-sm bg-white">
-
-<ul style="list-style-type: none; padding-left: 0;">
-  {% for article in articles  %}
-  <div class="rounded-3 p-4 mb-5 shadow-lg bg-light">
-  <li>Title : {{article.title}}  / <br>  Content : {{article.content}}</li>
-  </div>
-  {% endfor %}
-</ul>
-
-</div>
+<p class="text-success lead display-4">Blog yazılarımızı görmek için Makaleler sekmesini tıkla!</p>
 {% else %}
 <p class="text-success lead display-4">Blog yazılarımızı görmek için giriş yapın.</p>
 {% endif %}
@@ -60,8 +49,6 @@
   {% endfor %}
 </ul>
 -->
-
-<p>{{article_id}}</p>
 <!-- Döngü Kullanımı end-->
 
 
