--- a/Blog/templates/dashboard.html
+++ b/Blog/templates/dashboard.html
@@ -74,7 +74,7 @@
                             {% for article in articles %}
                                 <tr>
                                     <th scope="row">{{ article.id }}</th>
-                                    <td> <a href="/articles/{{ article.id }}">{{ article.title }}</a></td>
+                                    <td> <a href="/article/{{ article.id }}">{{ article.title }}</a></td>
                                     <td>{{ article.author }}</td>
                                     <td>
                                         {% if article.created_date %}
