Implement article deletion and update functionality; add routes for deleting and updating articles, and create corresponding templates for article updates.

--- a/Blog/templates/layout.html
+++ b/Blog/templates/layout.html
@@ -52,6 +52,10 @@
     
     {% endblock dashboard %}
 
+    {% block updateArticle %}
+    
+    {% endblock updateArticle %}
+
         <!-- Register Area -->
         {% block register %}
         {% endblock %}
