--- a/Blog/templates/layout.html
+++ b/Blog/templates/layout.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
@@ -53,7 +54,7 @@
     {% endblock dashboard %}
 
     {% block updateArticle %}
-    
+
     {% endblock updateArticle %}
 
         <!-- Register Area -->
