--- a/Blog/templates/update.html
+++ b/Blog/templates/update.html
@@ -25,7 +25,7 @@
                         
                         <div class="form-group text-end">
                             <button type="submit" class="btn btn-primary btn-lg px-4">
-                                <i class="fas fa-save me-2"></i>Güncelle
+                                <i class="fas fa-sync-alt me-2"></i>Güncelle
                             </button>
                         </div>
                     </form>
