Add contact page and update navbar; create a new contact.html template with form functionality and styling, and update navbar to link to the contact page.

--- a/Blog/templates/layout.html
+++ b/Blog/templates/layout.html
@@ -58,6 +58,10 @@
 
     {% endblock updateArticle %}
 
+    {% block contact %}
+    
+    {% endblock contact %}
+    
         <!-- Register Area -->
         {% block register %}
         {% endblock %}
