--- a/Blog/templates/includes/navbar.html
+++ b/Blog/templates/includes/navbar.html
@@ -49,7 +49,7 @@
          -->
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link text-white" href="/follow_addresses" style="transition: all 0.3s ease; padding: 0.5rem 1rem;">
+          <a class="nav-link text-white" href="/contact" style="transition: all 0.3s ease; padding: 0.5rem 1rem;">
             Takip edin
           </a>
         </li>
